--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
     <div id="demo">
 
-        
         <h1>AJAX is a developer's dream</h1>
-        <p><button ondblclick="loadData()">Change this content</button></p>
+        <p><button onclick="loadData()">Change this content</button></p>
     </div>
     <script src="./script.js"></script>
 </body>
