--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <h1>AJAX is a developer's dream</h1>
         <p><button onclick="loadData()">Change this content</button></p>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
